Small comment section visible fix

--- a/src/components/CommentsSection/index.module.scss
+++ b/src/components/CommentsSection/index.module.scss
@@ -2,10 +2,10 @@
 
 .main {
   padding: $padding-2xl;
+  padding-top: 0;
 }
 
 .heading {
   font-weight: $weight-md;
   font-size: $text-lg;
-  padding: $padding-2xl 0;
 }
